Fix TextField style with dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-input.MuiInputBase-input:disabled {
-  -webkit-text-fill-color: #000;
-}
-
 iframe {
   width: 100%;
   height: 1130px;
